# lead

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: code_question.md  config.yml  question.md
data/benchmark_routes/: Town15.xml
docs/source/: carla_training.md  conf.py  cross_dataset_training.md  data_collection.md  debug_expert.md  evaluation.md  faq.md  index.rst  inspecting_pickle_files.md  jupyter_notebooks.md  known_issues.md  slurm_data_collection.md  slurm_evaluation.md  slurm_overview.md  slurm_training.md
lead/common/: base_agent.py  common_utils.py  config_base.py  constants.py  kalman_filter.py  kinematic_bicycle_model.py  logging_config.py  pid_controller.py  ransac.py  route_planner.py  sensor_setup.py  visualizer.py
lead/expert/: config_expert.py  expert.py  expert_base.py  expert_utils.py  privileged_route_planner.py
lead/inference/: closed_loop_inference.py  config_closed_loop.py  config_open_loop.py  open_loop_inference.py  sensor_agent.py
notebooks/: carla_offline_inference.ipynb  data_format.ipynb  inspect_expert_output.ipynb  inspect_sensor_agent_io.ipynb
scripts/: build_buckets_posttrain.py  build_buckets_pretrain.py  build_cache.py  eval_bench2drive.sh  eval_longest6.sh  eval_town13.sh  main.sh
slurm/: config_slurm.py  evaluate.sh  evaluate_expert.sh  evaluate_navhard_two_stage.sh  evaluate_navtest.sh  evaluate_one_route.sh  init.sh  submit_navhard.sh  submit_navtest.sh  train.sh
(+85 files in other folders)
